# kirbo

./: Cargo.toml  README.md
.github/workflows/: main.yml  pages.yml  release.yml
kirbo/: Cargo.toml  commands.rs  config.rs  help.txt  lock.rs  npm.rs  options.rs  program.rs  resolver.rs  semver.rs
kirbo/commands/exec/: main.rs
kirbo/commands/install/: help.txt  main.rs  options.rs
kirbo/commands/run/: main.rs
kirbo/testdata/: Kirbo.lock-prettier  Kirbo.lock-succulent
kirbo/tests/: main.rs  testing.rs
kirbo/tests/testdata/01-easy/: package.json
kirbo/tests/testdata/04-expert/: package.json
kirbo/tests/testdata/10-env/: package.json
kirbo/tests/testdata/20-prettier/: package.json
kirbo/tests/testdata/22-esbuild/: package.json
kirbo/tests/testdata/30-npm/: package-lock.json
kirbo/tests/testdata/31-yarn/: package.json
kirbo/tests/testdata/32-berry/: .pnp.cjs  package.json
kirbo_firewall/: Cargo.toml  README.md  kirbo_firewall.rs
kirbo_firewall/is-negative-zero/: index.js
kirbo_firewall/leftpad/: index.js
kirbo_workspace/: Cargo.toml  lib.rs  package_json.rs  workspace.rs
kirbo_workspace/testdata/single_package/docs/: usage.md
kirbo_workspace/testdata/single_package/internal/: package.json
kirbo_workspace/testdata/workspace_direct/: package.json
kirbo_workspace/testdata/workspace_direct/internal/: index.js
kirbo_workspace/testdata/workspace_direct/nya/: package.json
kirbo_workspace/testdata/workspace_direct/poyo/: index.js
kirbo_workspace/testdata/workspace_nested/: package.json
kirbo_workspace/testdata/workspace_nested/internal/docs/: usage.md
kirbo_workspace/testdata/workspace_nested_wildcard/: package.json
kirbo_workspace/testdata/workspace_nested_wildcard/docs/: faq.md
src/: config.rs  lock.rs  main.rs  npm.rs  options.rs  resolver.rs  semver.rs
src/commands/: mod.rs
src/commands/exec/: main.rs
src/commands/install/: main.rs  options.rs
src/commands/run/: main.rs
tests/: main.rs  testing.rs
tests/testdata/01-easy/: package.json
tests/testdata/02-medium/: package.json
tests/testdata/03-hard/: package.json
tests/testdata/10-env/: package.json
tests/testdata/11-and/: package.json
tests/testdata/11-prettier/: package.json
tests/testdata/20-prettier/: package.json
tests/testdata/30-npm/: package-lock.json  package.json
www/: docusaurus.config.js  package-lock.json  package.json  tsconfig.json
www/blog/: 2022-11-15-road-to-1.0.md  authors.yml
www/docs/: installation.md  intro.md
www/docs/migrating/: _category_.json  from-berry.md  from-yarn.md  npm.md
www/docs/tutorial-basics/: _category_.json
www/docs/tutorial-extras/: _category_.json
www/src/css/: custom.css
www/src/pages/: index.tsx
