[package]
name = "kirbo"
version = "0.0.0"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "A secure and fast npm/yarn alternative"
keywords = []
license = "MIT"
homepage = "https://github.com/aslilac/kirbo"
repository = "https://github.com/aslilac/kirbo"
documentation = "https://docs.rs/kirbo"
edition = "2021"

[dependencies]
async-recursion = "1.0.0"
colored = "2.0.0"
once_cell = "1.15.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
