[workspace]
resolver = "2"
members = [
	"kirbo/",
	"kirbo_firewall/",
	"serde_yarn_lock/",
]

[workspace.dependencies]
kirbo_firewall = { version = "*", path = "kirbo_firewall/" }
kirbo_npm = { version = "*", path = "kirbo_npm/" }
kirbo_yarn = { version = "*", path = "kirbo_yarn/" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_yaml = "0.9.14"
serde_yarn_lock = { version = "*", path = "serde_yarn_lock/" }
